--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "ts-node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.2"
-  },
-  "devDependencies": {
-    "@vercel/node": "^3.0.11"
+    "axios": "^1.6.2",
+    "ts-node": "^10.9.1"
   }
 }
