--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Scheduled Job
 
 on:
   schedule:
-    - cron: '* * * * *'  # 每天午夜执行，可以根据需求修改 cron 表达式
+    - cron: '* * * * *'
 
 jobs:
   run-script:
